# llama3-3-70b-finetuning

./: .gitignore  README.md  adapter_config.json  config.json  custom.bib  environment.yml  finetune_llama33_70b.py  ft_data_sample.json  generation_config.json  pyproject.toml  upload_to_hf.py
